--- a/README.adoc
+++ b/README.adoc
@@ -3,6 +3,7 @@ ifdef::env-github,env-browser[:relfileprefix: docs/]
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 https://travis-ci.org/CS2103-AY1718S1-T17-B4/addressbook-level4[image:https://travis-ci.org/CS2103-AY1718S1-T17-B4/addressbook-level4.svg?branch=master[Build Status]]
+https://ci.appveyor.com/project/FrozVentus/addressbook-level4-gh5we/branch/master[image:https://ci.appveyor.com/api/projects/status/wn14altnlj5mtwok/branch/master?svg=true[Build status]]
 https://ci.appveyor.com/project/damithc/addressbook-level4[image:https://ci.appveyor.com/api/projects/status/3boko2x2vr5cc3w2?svg=true[Build status]]
 https://coveralls.io/github/CS2103-AY1718S1-T17-B4/addressbook-level4?branch=master[image:https://coveralls.io/repos/github/CS2103-AY1718S1-T17-B4/addressbook-level4/badge.svg?branch=master[Coverage Status]]
 
