added all the user stories

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -723,18 +723,66 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 |Priority |As a ... |I want to ... |So that I can...
 |`* * *` |new user |see usage instructions |refer to instructions when I forget how to use the App
 
+|`* * *` |user |be able to sort my AddressBook |find my contacts easily
+
+|`* * *` |user |undo my action |undo what I have done accidentally
+
+|`* * *` |user |redo my action |redo what I have undone
+
 |`* * *` |user |add a new person |
+
+|`* * *` |user |merge duplicate contacts |have a cleaner AddressBook
+
+|`* * *` |user |edit contacts |update contact information
 
 |`* * *` |user |delete a person |remove entries that I no longer need
 
 |`* * *` |user |find a person by name |locate details of persons without having to go through the entire list
 
+|`* * *` |user |have a confirmation dialog box for deleting |keep my contacts safe
+
+|`* *` |user |save the birthdays of my contacts |check my contact's birthday
+
+|`* *` |user |have night mode available |use it comfortably at night
+
+|`* *` |user |have a shortcut for removing contacts |easily remove contacts
+
+|`* *` |user |be able to group my contacts |find grouped contacts easily
+
+|`* *` |user |store multiple numbers for a single person |store numbers for friends with multiple numbers
+
+|`* *` |user |change colour scheme/theme |customise the AddressBook to my liking
+
+|`* *` |new user |import all my contacts from my phone |easily transfer contacts
+
+|`* *` |user |add a profile picture for my contacts |easily identify my contacts
+
+|`* *` |user |add a user login for access to my AddressBook |prevent unauthorised access by other people
+
+|`* *` |user |add notes to my contact |store additional information
+
+|`* *` |user |change my display fonts |customise my AddressBook to my liking
+
+|`* *` |user |find suggested contacts |easily add contacts that I do not have within my social circle
+
+|`* *` |user |have a recently deleted folder |restore contacts that I have deleted accidentally
+
 |`* *` |user |hide link:#private-contact-detail[private contact details] by default |minimize chance of someone else seeing them by accident
 
-|`*` |user with many persons in the address book |sort persons by name |locate a person easily
-|=======================================================================
+|`*` |user |have a section for frequent contacts |easily access frequent contacts
 
-{More to be added}
+|`*` |user |have reminders for up-coming birthdays |know whose birthday is coming up
+
+|`*` |user |delete multiple contacts at once |clear contacts more efficiently
+
+|`*` |user |have cloud integration |access contacts from any device
+
+|`*` |user |have quick access widgets |access AddressBook quickly
+
+|`*` |user |know the date of adding a contact |know when I added that contact
+
+
+|=======================================================================
 
 [appendix]
 == Use Cases
