--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= Address Book (Level 4)
+= OneBook
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
