Changed the urls of the badge in ReadMe,DeveloperGuide,UserGuide as well as the title to OneBook

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1,4 +1,4 @@
-= link:#address-book[AddressBook] Level 4 - Developer Guide
+= OneBook - Developer Guide
 :toc:
 :toc-title:
 :toc-placement: preamble
