--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -4,18 +4,19 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: images
 :stylesDir: stylesheets
 
-AddressBook - Level 4 was developed by the https://se-edu.github.io/docs/Team.html[se-edu] team. +
-The dummy content given below serves as a placeholder to be used by future forks of the project. +
-{empty} +
-We are a team based in the http://www.comp.nus.edu.sg[School of Computing, National University of Singapore].
+OneBook was developed by https://github.com/CS2103-AY1718S1-T17-B4[Team T17-B4], improving on
+AddressBook - Level 4 +
+developed by the https://se-edu.github.io/docs/Team.html[se-edu] team. +
+We are a team of students from the http://www.comp.nus.edu.sg[School of Computing, National University of Singapore].
 
 == Project Team
 
-=== John Doe
-image::damithc.jpg[width="150", align="left"]
-{empty}[http://www.comp.nus.edu.sg/~damithch[homepage]] [https://github.com/damithc[github]] [<<johndoe#, portfolio>>]
+=== Henry Ang
+image::henry.jpg[width="150", align="left"]
+{empty}[https://github.com/frozventus[github]] [<<johndoe#, portfolio>>]
 
-Role: Project Advisor
+Role: Developer +
+Responsibilities: Model
 
 '''
 
