--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -114,13 +114,14 @@ Returns any person having names `Betsy`, `Tim`, or `John`
 
 === Deleting a person : `delete`
 
-Deletes the specified person from the address book. +
-Format: `delete INDEX`
+Deletes the specified person(s) from the address book. +
+Format: `delete INDEX, [MORE_INDEXES]`
 
 ****
-* Deletes the person at the specified `INDEX`.
+* Deletes the person(s) at the specified `INDEX`.
 * The index refers to the index number shown in the most recent listing.
 * The index *must be a positive integer* 1, 2, 3, ...
+* The indexes *must be in ascending order*.
 ****
 
 Examples:
@@ -128,6 +129,9 @@ Examples:
 * `list` +
 `delete 2` +
 Deletes the 2nd person in the address book.
+* `list` +
+`delete 3, 4` +
+Deletes the 3rd and 4th persons in the address book.
 * `find Betsy` +
 `delete 1` +
 Deletes the 1st person in the results of the `find` command.
@@ -237,8 +241,8 @@ There is no need to save manually.
 * *Add* `add n/NAME p/PHONE_NUMBER b/BIRTHADAY e/EMAIL a/ADDRESS [t/TAG]...` +
 e.g. `add n/James Ho p/22224444 b/18-04-1995 e/jamesho@example.com a/123, Clementi Rd, 1234665 t/friend t/colleague`
 * *Clear* : `clear`
-* *Delete* : `delete INDEX` +
-e.g. `delete 3`
+* *Delete* : `delete INDEX, [MORE_INDEXES]` +
+e.g. `delete 3, 4, 5`
 * *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [b/BIRTHDAY] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
 e.g. `edit 2 n/James Lee e/jameslee@example.com`
 * *Find* : `find KEYWORD [MORE_KEYWORDS]` +
