--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -92,25 +92,30 @@ Edits the phone number and email address of the 1st person to be `91234567` and 
 * `edit 2 n/Betsy Crower t/` +
 Edits the name of the 2nd person to be `Betsy Crower` and clears all existing tags.
 
-=== Locating persons by name: `find`
+=== Locating persons: `find`
 
-Finds persons whose names contain any of the given keywords. +
-Format: `find KEYWORD [MORE_KEYWORDS]`
+Finds persons whose names/addresses/emails/phone numbers contain any of the given keywords. +
+Format: `find MAIN_KEYWORD KEYWORD [MORE_KEYWORDS]`
 
 ****
-* The search is case insensitive. e.g `hans` will match `Hans`
-* The order of the keywords does not matter. e.g. `Hans Bo` will match `Bo Hans`
-* Only the name is searched.
-* Only full words will be matched e.g. `Han` will not match `Hans`
-* Persons matching at least one keyword will be returned (i.e. `OR` search). e.g. `Hans Bo` will return `Hans Gruber`, `Bo Yang`
+* The main keyword determines the search field (i.e. *name*/*address*/*email*/*phone*).
+* The search is case insensitive. e.g `name hans` will return `Hans`
+* The order of the keywords does not matter. e.g. `name Hans Bo` will return `Bo Hans`
+* Partial words will still be matched e.g. `name Han` will return `Hans`
+* For *name*, *email*, and *phone*, persons containing at least one keyword will be returned (i.e. `OR` search). e.g. `name Hans Bo` will return `Hans Gruber`, `Bo Yang`
+* For *address*, only persons containing all the keywords will be returned (i.e. `AND` search). e.g. `address Serangoon Street 4` will not return `Serangoon Street 6`
 ****
 
 Examples:
 
-* `find John` +
+* `find name John` +
 Returns `john` and `John Doe`
-* `find Betsy Tim John` +
+* `find name Betsy Tim John` +
 Returns any person having names `Betsy`, `Tim`, or `John`
+* `find email johndoe` +
+Returns any person having an email containing `johndoe`
+* `find address Geylang Street 5` +
+Returns only persons having an address containing `Geylang Street 5`
 
 === Deleting a person : `delete`
 
@@ -245,8 +250,9 @@ e.g. `add n/James Ho p/22224444 b/18-04-1995 e/jamesho@example.com a/123, Clemen
 e.g. `delete 3, 4, 5`
 * *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [b/BIRTHDAY] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
 e.g. `edit 2 n/James Lee e/jameslee@example.com`
-* *Find* : `find KEYWORD [MORE_KEYWORDS]` +
-e.g. `find James Jake`
+* *Find* : `find MAIN_KEYWORD KEYWORD [MORE_KEYWORDS]` +
+e.g. `find name James Jake` +
+e.g. `find phone 123456789`
 * *List* : `list`
 * *Help* : `help`
 * *Select* : `select INDEX` +
