[Developer Guide] Update Developer Guide with Ui implementation

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -218,6 +218,21 @@ Classes used by multiple components are in the `seedu.addressbook.commons` packa
 
 This section describes some noteworthy details on how certain features are implemented.
 
+=== User Interface
+
+The User Interface is implemented using JavaFx. The Ui consists of a `MainWindow` which holds `StackWindow` fields.
+Each of the `StackWindow` is to be filled with the Ui components as listed below.
+
+*Ui components:* +
+
+* `CommandBox` - Input field
+* `PersonListPanel` - Display list of Person
+* `ResultDisplay` - Display response of command
+* `PersonDetailsCard` - Display Details of Person
+* `AddressPanel` - Display Address and shows map of address
+
+The Ui also makes use of `DarkTheme,css` and `LightTheme.css` file to set the color scheme.
+
 // tag::undoredo[]
 === Undo/Redo mechanism
 
