--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -65,7 +65,7 @@ Format: `mode`
 === Adding a person: `add`
 
 Adds a person to the address book +
-Format: `add n/NAME [p/PHONE_NUMBER] [b/BIRTHDAY] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
+Format: `add n/NAME [p/PHONE_NUMBER] [b/BIRTHDAY] [e/EMAIL] [a/ADDRESS] [o/ORGANISATION] [t/TAG]...`
 
 [TIP]
 A person can have any number of tags (including 0)
@@ -75,7 +75,7 @@ Fields that are enclosed by square brackets are optional.
 
 Examples:
 
-* `add n/John Doe p/98765432 b/21-01-1995 e/johnd@example.com a/John street, block 123, #01-01`
+* `add n/John Doe p/98765432 b/21-01-1995 e/johnd@example.com a/John street, block 123, #01-01 o/Apple Inc.`
 * `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison b/22-02-1998 p/1234567 t/criminal`
 * `add n/Timothy Smith`
 
@@ -91,7 +91,7 @@ Format: `list`
 === Editing a person : `edit`
 
 Edits an existing person in the address book. +
-Format: `edit INDEX [n/NAME] [p/PHONE] [b/BIRTHDAY] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
+Format: `edit INDEX [n/NAME] [p/PHONE] [b/BIRTHDAY] [e/EMAIL] [a/ADDRESS] [o/ORGANISATION] [t/TAG]...`
 
 ****
 * Edits the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
