--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -164,7 +164,7 @@ Selects the person identified by the index number used in the last person listin
 Format: `select INDEX`
 
 ****
-* Selects the person and loads the Google search page the person at the specified `INDEX`.
+* Selects and loads the address of the person at the specified `INDEX` in Google Maps.
 * The index refers to the index number shown in the most recent listing.
 * The index *must be a positive integer* `1, 2, 3, ...`
 ****
