--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -426,6 +426,7 @@ The format in the VCard file is checked to ensure that it is valid before import
 * `email` +
 * `phone number` +
 * `birthday` +
+* `organisation`
 
 === Add Contact with optional fields
 The `add` function is implemented by `AddCommand`. The `add` function has been enhanced to allow the user to add certain fields into the contact. For the fields that the user does not want to input, no prefixes for the field will be entered. The class `AddCommandParser` will interpret it as a null value and assign the string '-' to the following field. This will represent that the field is not assigned.
@@ -434,7 +435,17 @@ The `name` field is compulsory.
 
 The fields that are not compulsory are `phone`, `birthday`, `email`, `address`, `organisation`, and `tags`.
 
+=== Export mechanism
 
+The `export` function is implemented by `ExportCommand`, which exports the contacts in Onebook to a VCard file. It exports a VCard file to a valid directory which the user need to input after keying "export" command in the command box. Inputting a directory is easier for the user so user would know where to find the exported file.
+The fields that are currently exported to VCard file are: +
+
+* `name` +
+* `address` +
+* `email` +
+* `phone number` +
+* `birthday` +
+* `organisation`
 
 == Documentation
 
