update UI picture

--- a/docs/ContactUs.adoc
+++ b/docs/ContactUs.adoc
@@ -3,4 +3,5 @@
 
 * *Bug reports, Suggestions* : Post in our https://github.com/CS2103AUG2017-T17-B4/main/issues[issue tracker] if you noticed bugs or have suggestions on how to improve.
 * *Contributing* : We welcome pull requests. Follow the process described https://github.com/oss-generic/process[here]
-* *Email us* : You can also reach us at `stanley@comp.nus.edu.sg` , `darrin@comp.nus.edu.sg` , `gideon@comp.nus.edu.sg` or `henry@comp.nus.edu.sg`.
+* *Email us* : You can also reach us at `Stanley Guok: e0031265@u.nus.edu` , `Darrin Loh: e0031557@u.nus.edu` , `Gideon Fu: e0031493@u.nus.edu`  or `Henry Ang: e0031728@u.nus.edu`.
+
