--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -14,6 +14,18 @@ endif::[]
 
 By: `CS2103AUG2017 T17-B4`      Since: `Jun 2016`      Licence: `MIT`
 
+== Product Overview
+
+=== Introduction
+
+OneBook is a desktop Address Book application. OneBook uses a Graphical User Interface (GUI) but most of the interactions happen using Command Line Interface (CLI).
+
+OneBook is a Java sample application intended for students learning Software Engineering while using Java as the main programming language.
+
+=== About
+
+OneBook User Guide contains a detailed manual for using the application. The step-by-step instructions in this User Guide will assist you when using OneBook.
+
 == Quick Start
 
 .  Ensure you have Java version `1.8.0_60` or later installed in your Computer.
