--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -375,6 +375,12 @@ Format: `bin clear`
 *Q*: How do I transfer my data to another Computer? +
 *A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder.
 
+*Q*: Why do I keep getting unknown command when typing a command?
+*A*: The command typed is invalid. Refer to Command Summary section for all the commands.
+
+*Q*: After entering list command, why do I not get any contact list?
+*A*: You might not have added at least one person to Onebook. Add at least one person to Onebook and try running the command again.
+
 == Command Summary
 
 * *Help* : `help`
