--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -379,30 +379,12 @@ We are using `java.util.logging` package for logging. The `LogsCenter` class is 
 
 Certain properties of the application can be controlled (e.g App name, logging level) through the configuration file (default: `config.json`).
 
-=== Recycle bin [yellow]#*Coming in v2.0#
-The recycle bin is implemented by having address book store the list of person deleted using a separate list from the main address book list. +
-In this list, the person details is stored along with a date of deletion of the person. +
-Upon every startup of the program, the system time is checked against the date of deletion, and entries that are more than 7 days old will be removed from the list. +
+=== Add Contact with optional fields
+The `add` function is implemented by `AddCommand`. The `add` function has been enhanced to allow the user to add certain fields into the contact. For the fields that the user does not want to input, no prefixes for the field will be entered. The class `AddCommandParser` will interpret it as a null value and assign the string '-' to the following field. This will represent that the field is not assigned.
 
-==== Design considerations
+The `name` field is compulsory.
 
-**Aspect:** Implementation of `RecycleBin` +
-**Alternative 1 (current choice):** Add a new type of list `RecycleBinList` extending from `UniquePersonsList` +
-**Pros:** We will be able to store additional information in the list such as deletion date. Existing methods for `UniquePersonsList` can still be used. +
-**Cons:** Increases workload as a new class is added. Testing of newly introduced class is also required. +
-**Alternative 2:** Just reuse `UniquePersonsList` to store a separate list for `recycleBin` +
-**Pros:** Does not require alot of code changes. +
-**Cons:** Unable to add additional fields to `recycleBin` entry. Additional features such as automatic removal of entry from list cannot be implemented without changing existing code in `UniquePersonsList`. +
-
----
-
-**Aspect:** Implementation of commands for `RecycleBin` +
-**Alternative 1 (current choice):** Add a new group of commands specifically for `RecycleBin` usage with `bin` as the first part of each command. +
-**Pros:** Less mixup in command purpose. Commands will look more organized. Existing command naming can be reused. +
-**Cons:** A new parser will have to added that determines the command is for `RecycleBin` before command is to be parsed again to determine usage. +
-**Alternative 2:** Add a new command for each feature of `RecycleBin` usage. +
-**Pros:** Additional parsing of command is unnecessary. +
-**Cons:** Commands will be easily mixed up. Purpose of command will be unintuitive, `clear` may mean to clear recycle or to clear address book. A separate command name for clearing recycle bin need to be thought of (clear can no longer be used). +
+The fields that are not compulsory are `phone`, `birthday`, `email`, `address`, `organisation`, and `tags`.
 
 === Find mechanism
 
@@ -428,13 +410,6 @@ The format in the VCard file is checked to ensure that it is valid before import
 * `birthday` +
 * `organisation`
 
-=== Add Contact with optional fields
-The `add` function is implemented by `AddCommand`. The `add` function has been enhanced to allow the user to add certain fields into the contact. For the fields that the user does not want to input, no prefixes for the field will be entered. The class `AddCommandParser` will interpret it as a null value and assign the string '-' to the following field. This will represent that the field is not assigned.
-
-The `name` field is compulsory.
-
-The fields that are not compulsory are `phone`, `birthday`, `email`, `address`, `organisation`, and `tags`.
-
 === Export mechanism
 
 The `export` function is implemented by `ExportCommand`, which exports the contacts in Onebook to a VCard file. It exports a VCard file to a valid directory which the user need to input after keying "export" command in the command box. Inputting a directory is easier for the user so user would know where to find the exported file.
@@ -446,6 +421,29 @@ The fields that are currently exported to VCard file are: +
 * `phone number` +
 * `birthday` +
 * `organisation`
+
+=== Recycle bin
+The recycle bin is implemented by having address book store the list of person deleted using a separate list from the main address book list. +
+
+==== Design considerations
+
+**Aspect:** Implementation of `RecycleBin` +
+**Alternative 1 (current choice):** Add a new type of list `RecycleBinList` extending from `AddressBook` +
+**Pros:** We will be able to store additional information in the list such as deletion date. Existing methods for `AddressBook` can still be used. +
+**Cons:** Increases workload as a new class is added. Testing of newly introduced class is also required. +
+**Alternative 2:** Just reuse `AddressBook` to store a separate list for `recycleBin` +
+**Pros:** Does not require alot of code changes. +
+**Cons:** Unable to add additional fields to `recycleBin` entry. Additional features such as automatic removal of entry from list cannot be implemented without changing existing code in `AddressBook`. +
+
+---
+
+**Aspect:** Implementation of commands for `RecycleBin` +
+**Alternative 1 (current choice):** Add a new group of commands specifically for `RecycleBin` usage with `bin` as the first part of each command. +
+**Pros:** Less mixup in command purpose. Commands will look more organized. Existing command naming can be reused. +
+**Cons:** A new parser will have to added that determines the command is for `RecycleBin` before command is to be parsed again to determine usage. +
+**Alternative 2:** Add a new command for each feature of `RecycleBin` usage. +
+**Pros:** Additional parsing of command is unnecessary. +
+**Cons:** Commands will be easily mixed up. Purpose of command will be unintuitive, `clear` may mean to clear recycle or to clear address book. A separate command name for clearing recycle bin need to be thought of (clear can no longer be used). +
 
 == Documentation
 
